--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
 
     //butter knife
     implementation 'com.jakewharton:butterknife:10.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //glide
@@ -60,7 +64,14 @@ dependencies {
     //Timber For logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    // pager indicator
+    implementation 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.1.2'
+
+    /*Automation*/
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation files('libs/GraphView-4.0.1.jar')
 }
