--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.login.LoginPagerActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -34,7 +36,7 @@
         </activity>
         <activity
             android:name=".ui.home.HomeActivity"
-            android:hardwareAccelerated="false"
+            android:hardwareAccelerated="true"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -46,6 +48,7 @@
         </activity>
         <activity
             android:name=".ui.appintro.AppIntroActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <receiver android:name=".utils.receiver.SmsReceiver">
